--- a/main.css
+++ b/main.css
@@ -563,7 +563,7 @@ CONTAINER
     margin: 80px 0;
 }
 
-
+.
 
 
 
@@ -588,7 +588,7 @@ CONTAINER
 
 
 
-
+/* ====================================================================================================== */
 
 
 
@@ -891,7 +891,7 @@ Secondary Section
     }
     .big-number-circle{
         margin-top: 50px;
-        margin-left: 30px;
+        margin-left: 20px;
         width: 320px;
         height: 320px;
     }
