--- a/main.css
+++ b/main.css
@@ -161,7 +161,7 @@ nav{
     color: #7b7b7b;
     font-size: 17px;
     font-weight: 400;
-    line-height: 25px;
+    line-height: 30px;
     padding-top: 10px;
 }
 
@@ -553,17 +553,59 @@ CONTAINER
 .switch-class button:hover{
     background-color: #52b765;
 }
-
-.machine img{
+.machine{
+    position: relative;
     width: 50%;
-    height: 80vh;
+    height: 200vh;
+}
+.machine img{
+    height: 130vh;
+    width: 100%;
+    padding-bottom: 20px;
     object-fit: cover;
 }
 .washing-machine{
     margin: 80px 0;
 }
 
-.
+.content-upon-washing-machine{
+    background-color: #fff;
+    padding: 20px 20px;
+    height: auto;
+    padding-bottom: 10px;
+    z-index: 2;
+}
+.content-upon-washing-machine p{
+    color: #52b765;
+    font-size: 17px;
+    margin-bottom: 10px;
+    font-weight: 600;
+}
+.content-upon-washing-machine h1{
+    color: #323232;
+    font-size: 32px;
+    margin-bottom: 10px;
+    font-weight: 800;
+}
+.content-upon-washing-machine h5{
+    color: #999;
+    font-size: 19px;
+    font-weight: 400;
+    line-height: 32px;
+    margin-bottom: 20px;
+}
+.col-list ul li{
+    color: #999;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 35px;
+}
+.col-list ul li::before{
+    content: "\f00c";
+    font-family: "fontAwesome";
+    color: #52b765;
+    padding-right: 15px;
+}
 
 
 
@@ -902,6 +944,7 @@ Secondary Section
     .machine img{
         width: 100%;
     }
+
 }
 
 
@@ -927,6 +970,61 @@ MEDIA QUARY FOR MIN-WIDTH 768px
     .big-number-circle {
         margin-top: 150px;
     }
+    .content-upon-washing-machine{
+        background-color: #fff;
+        padding: 60px 70px;
+        width: 60%;
+        /* height: auto;
+        padding-bottom: 20px; */
+        margin-top: 40px;
+        right: 2px;
+        position: absolute;
+        padding-bottom: 10px;
+    }
+    .content-upon-washing-machine p{
+        color: #52b765;
+        font-size: 17px;
+        margin-bottom: 10px;
+        font-weight: 600;
+    }
+    .content-upon-washing-machine h1{
+        color: #323232;
+        font-size: 32px;
+        margin-bottom: 10px;
+        font-weight: 800;
+    }
+    .content-upon-washing-machine h5{
+        color: #999;
+        font-size: 19px;
+        font-weight: 400;
+        line-height: 32px;
+        margin-bottom: 20px;
+    }
+    .col-list ul li{
+        color: #999;
+        font-size: 20px;
+        font-weight: 400;
+        line-height: 35px;
+    }
+    .col-list{
+        display: flex;
+        justify-content: space-around;
+    }
+    .washing-machine{
+        display: flex;
+        margin: 50px 0;
+    }
+    .machine{
+        position: relative;
+        width: 50%;
+        height: 100vh;
+    }
+    .machine img{
+        height: 100vh;
+        width: 100%;
+        padding-bottom: 20px;
+        object-fit: cover;
+    }
 }
 
 
@@ -939,7 +1037,7 @@ MEDIA QUARY FOR MIN-WIDTH 1024px
 ==========================*/
 
 
-@media(min-width: 1024px){
+@media(min-width: 924px){
     .num_circle{
         position: absolute;
         left: 42%;
@@ -995,7 +1093,21 @@ MEDIA QUARY FOR MIN-WIDTH 1024px
         margin-right: -30px;
         margin-left: 200px;
     }
-    
+    .washing-machine{
+        margin: 80px 0;
+        display: flex;
+    }
+    .machine{
+        position: relative;
+        width: 50%;
+        height: 70vh;
+    }
+    .machine img{
+        height: 70vh;
+        width: 100%;
+        padding-bottom: 20px;
+        object-fit: cover;
+    }
 }
 
 @media(min-width: 1330px){
@@ -1007,6 +1119,35 @@ MEDIA QUARY FOR MIN-WIDTH 1024px
     }
     .exp{
         width: 50%;
+    }
+ 
+    .content-upon-washing-machine{
+        background-color: #fff;
+        padding: 20px 20px;
+        height: 60vh;
+        width: 40%;
+        margin-top: 20px;
+        right: 2px;
+        position: absolute;
+        padding-bottom: 10px;
+    }
+    .machine{
+        position: relative;
+        width: 55%;
+        height: 110vh;
+    }
+    .machine img{
+        height: 110vh;
+        width: 100%;
+        padding-bottom: 20px;
+        object-fit: cover;
+    }
+    .content-upon-washing-machine {
+        margin-right: 20px;
+        position: absolute;
+        width: 50%;
+        height: auto;
+        padding: 50px 60px;
     }
 }
 
