--- a/main.css
+++ b/main.css
@@ -553,7 +553,7 @@ CONTAINER
 .switch-class button:hover{
     background-color: #52b765;
 }
-.machine{
+/* .machine{
     position: relative;
     width: 50%;
     height: 200vh;
@@ -563,7 +563,7 @@ CONTAINER
     width: 100%;
     padding-bottom: 20px;
     object-fit: cover;
-}
+} */
 .washing-machine{
     margin: 80px 0;
 }
@@ -1097,6 +1097,13 @@ MEDIA QUARY FOR MIN-WIDTH 1024px
         margin: 80px 0;
         display: flex;
     }
+    .content-upon-washing-machine {
+        margin-right: 30px;
+        position: absolute;
+        width: 60%;
+        height: auto;
+        padding: 50px 50px;
+    }
     .machine{
         position: relative;
         width: 50%;
@@ -1107,6 +1114,12 @@ MEDIA QUARY FOR MIN-WIDTH 1024px
         width: 100%;
         padding-bottom: 20px;
         object-fit: cover;
+    }
+    .content-upon-washing-machine h1{
+        font-size: 45px;
+    }
+    .content-upon-washing-machine p{
+        font-size: 25px;
     }
 }
 
@@ -1134,10 +1147,10 @@ MEDIA QUARY FOR MIN-WIDTH 1024px
     .machine{
         position: relative;
         width: 55%;
-        height: 110vh;
+        height: 130vh;
     }
     .machine img{
-        height: 110vh;
+        height: 130vh;
         width: 100%;
         padding-bottom: 20px;
         object-fit: cover;
@@ -1148,6 +1161,9 @@ MEDIA QUARY FOR MIN-WIDTH 1024px
         width: 50%;
         height: auto;
         padding: 50px 60px;
+    }
+    .col-list1{
+        margin-right: 50px;
     }
 }
 
