--- a/main.css
+++ b/main.css
@@ -606,8 +606,31 @@ CONTAINER
     color: #52b765;
     padding-right: 15px;
 }
-
-
+.first-head{
+    text-align: center;
+}
+.first-head p{
+    font-size: 20px;
+    color: #52b765;
+    font-weight: 600;
+    letter-spacing: 1px;
+    padding-bottom: 10px;
+}
+.first-head h1{
+    font-size: 25px;
+    font-weight: 700;
+    padding-bottom: 10px;
+}
+.fancy-button{
+   padding: 10px 15px;
+   font-size: 22px;
+   font-weight: 600;
+   background-color: #fff;
+   width: 100%;
+   margin: 10px 0;
+   border: 1px solid transparent;
+   box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
+}
 
 /* ========================
  ALL FOCUS UPON SELECTION
@@ -947,7 +970,7 @@ Secondary Section
 
 }
 
-
+/* ================================================================================================== */
 
 /* ===========================
 MEDIA QUARY FOR MIN-WIDTH 768px
@@ -1115,12 +1138,41 @@ MEDIA QUARY FOR MIN-WIDTH 1024px
         padding-bottom: 20px;
         object-fit: cover;
     }
+    .content-upon-washing-machine{
+        margin-top: 50px;
+    }
     .content-upon-washing-machine h1{
-        font-size: 45px;
+        font-size: 40px;
+        font-weight: 600;
     }
     .content-upon-washing-machine p{
         font-size: 25px;
     }
+    .the-switch-button{
+        display: flex;
+    }
+    .first-head p{
+        font-size: 22px;
+        color: #52b765;
+        font-weight: 600;
+        letter-spacing: 1px;
+        padding-bottom: 10px;
+    }
+    .first-head h1{
+        font-size: 35px;
+        font-weight: 700;
+        padding-bottom: 30px;
+    }
+    .fancy-button{
+        padding: 15px 17px;
+        font-size: 22px;
+        font-weight: 600;
+        background-color: #fff;
+        width: 100%;
+        margin: 10px 0;
+        border: 1px solid transparent;
+        box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
+     }
 }
 
 @media(min-width: 1330px){
