--- a/main.css
+++ b/main.css
@@ -621,16 +621,56 @@ CONTAINER
     font-weight: 700;
     padding-bottom: 10px;
 }
-.fancy-button{
+.fancy-button,.fancy-button1,.fancy-button2{
    padding: 10px 15px;
    font-size: 22px;
    font-weight: 600;
    background-color: #fff;
    width: 100%;
+   cursor: pointer;
    margin: 10px 0;
    border: 1px solid transparent;
+   transition: 0.4s;
    box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
 }
+.fancy-button:hover,.fancy-button1:hover,.fancy-button2:hover{
+    color: #52b765;
+}
+.video video{
+    width: 100%;
+    
+}
+video:focus{
+    outline: none;
+}
+#videoClass{
+    position: relative;
+}
+.play-box{
+    font-size: 30px;
+    background-color: #52b765;
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    width: 130px;
+    height: 130px;
+    border-radius: 50%;
+    transform: translate(-50%,-50%);
+}
+.play-box::before{
+    content: "\f04b";
+    font-family: "fontAwesome";
+    color: #fff;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    position: absolute;
+    text-align: center;
+    box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
+}
+
 
 /* ========================
  ALL FOCUS UPON SELECTION
@@ -967,7 +1007,15 @@ Secondary Section
     .machine img{
         width: 100%;
     }
-
+    .play-box{
+        width: 70px;
+        height: 70px;
+    }
+    .play-box::before{
+        font-size: 25px;
+        margin-top: 1px;
+        margin-left: 3px;
+    }
 }
 
 /* ================================================================================================== */
@@ -1163,16 +1211,17 @@ MEDIA QUARY FOR MIN-WIDTH 1024px
         font-weight: 700;
         padding-bottom: 30px;
     }
-    .fancy-button{
-        padding: 15px 17px;
+    .fancy-button,.fancy-button1,.fancy-button2{
+        padding: 20px 20px;
         font-size: 22px;
         font-weight: 600;
+        cursor: pointer;
         background-color: #fff;
         width: 100%;
         margin: 10px 0;
         border: 1px solid transparent;
         box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
-     }
+    }
 }
 
 @media(min-width: 1330px){
