--- a/main.css
+++ b/main.css
@@ -643,11 +643,11 @@ CONTAINER
     color: #fff;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 52%;
     cursor: pointer;
     text-align: center;
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    height: 70px;
     border-radius: 50%;
     box-shadow: rgb(52 134 85 / 80%) 5px 13px 38px;
     transform: translate(-50%,-50%);
@@ -658,6 +658,7 @@ CONTAINER
     color: #fff;
     top: 50%;
     left: 50%;
+    font-size: 20px;
     transform: translate(-50%,-50%);
     position: absolute;
     text-align: center;
@@ -1031,8 +1032,6 @@ Secondary Section
     }
     .play-box::before{
         font-size: 25px;
-        margin-top: 1px;
-        margin-left: 3px;
     }
 }
 
@@ -1144,9 +1143,7 @@ MEDIA QUARY FOR MIN-WIDTH 768px
         border: 1px solid transparent;
         box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
     }
-    .video-text{
-    display: flex;
-    }
+  
 }
 
 
@@ -1155,7 +1152,7 @@ MEDIA QUARY FOR MIN-WIDTH 768px
 
 
 /* =======================
-MEDIA QUARY FOR MIN-WIDTH 1024px 
+MEDIA QUARY FOR MIN-WIDTH 924px 
 ==========================*/
 
 
@@ -1246,6 +1243,17 @@ MEDIA QUARY FOR MIN-WIDTH 1024px
     }
     .content-upon-washing-machine p{
         font-size: 25px;
+    }
+    .video-text{
+        display: flex;
+    }
+    .our-approach-div{
+        width: 50%;
+    }
+    .video img{
+        width: 90%;
+        margin: 50px 50px;
+        height: 350px;
     }
 }
 
