--- a/main.css
+++ b/main.css
@@ -7,7 +7,9 @@
     list-style-type: none;
     text-decoration: none;
 }
-
+html{
+    scroll-behavior: smooth;
+}
 nav{
     display: flex;
     justify-content: space-between;
@@ -677,6 +679,13 @@ CONTAINER
     line-height: 32px;
     margin-bottom: 20px;
 }
+p{
+    color: #999;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 20px;
+}
 .video{
     position: relative;
 }
@@ -685,7 +694,88 @@ CONTAINER
     height: 200px;
     object-fit: cover;
 }
-
+.emphasis{
+    display: flex;
+    justify-content: space-between;
+}
+.tag,.tag1,.tag2{
+    width: 50px;
+    min-width: 50px;
+    height: 50px;
+    margin-right: 20px;
+    position: relative;
+    box-shadow: 0 10px 20px rgb(0 0 0 / 6%);
+    background-color: #fff;
+    border-radius: 50%;
+}
+.tag::before{
+    content: "\f0a3";
+    font-family: "fontAwesome";
+    color:#52b765;
+    top: 50%;
+    left: 50%;
+    font-size: 22px;
+    transform: translate(-50%,-50%);
+    position: absolute;
+    text-align: center;
+    box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
+}
+.tag1::before{
+    content: "\f06b";
+    font-family: "fontAwesome";
+    color:#52b765;
+    top: 50%;
+    left: 50%;
+    font-size: 22px;
+    transform: translate(-50%,-50%);
+    position: absolute;
+    text-align: center;
+    box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
+}
+.tag2::before{
+    content: "\f2b5";
+    font-family: "fontAwesome";
+    color:#52b765;
+    top: 50%;
+    left: 50%;
+    font-size: 22px;
+    transform: translate(-50%,-50%);
+    position: absolute;
+    text-align: center;
+    box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
+}
+.videoPlayer{
+    width: 90%;
+    top: 50%;
+    display: none;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.videoPlayer img{
+    width: 10%;
+}
+video{
+    width: 100%;
+    height: 200px;
+}
+video:focus{
+    outline: none;
+}
+.emp-wrap h4{
+    font-size: 20px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+.emp-parent{
+    margin: 30px 0;
+}
+.close-btn{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 30px;
+}
 
 
 
@@ -1003,7 +1093,7 @@ Secondary Section
         height: 10px;
     }
     .container{
-        padding: 0 20px;
+        padding: 0 15px;
     }
     .box{
         display: block;
@@ -1143,7 +1233,17 @@ MEDIA QUARY FOR MIN-WIDTH 768px
         border: 1px solid transparent;
         box-shadow: 0 10px 23px rgb(157 174 185 / 15%);
     }
-  
+    .emp-parent{
+        padding: 10px 20px;
+        display: flex;
+        justify-content: space-between;
+    }
+    .emphasis{
+        width: 70%;
+    }
+    .emphasis p{
+        width: 90%;
+    }
 }
 
 
