--- a/main.css
+++ b/main.css
@@ -792,7 +792,7 @@ video:focus{
     padding: 5px 20px;
     margin: 5px 0;
 }
-.first-question{
+.first-question,.first-question1,.first-question2,.first-question3{
     display: flex;
     justify-content: space-between;
 }
@@ -803,22 +803,22 @@ video:focus{
     font-weight: 600;
     margin-bottom: 15px;
 }
-.first-question{
+.first-question,.first-question1,.first-question2{
     cursor: pointer;
 }
-.first-question h3{
+.first-question h3,.first-question1 h3,.first-question2 h3,.first-question3 h3{
     font-size: 17px;
     transition: 0.5s;
     padding: 17px 20px 15px 0;
 }
-.first-question:hover{
+.first-question:hover,.first-question1:hover,.first-question2:hover,.first-question3:hover{
     color: #52b765;
 }
-p.first-answer{
+p.first-answer,p.first-answer1,p.first-answer2,p.first-answer3{
     display: none;
     margin-top: 25px;
 }
-.first-question .fa{
+.first-question .fa,.first-question1 .fa,.first-question2 .fa,.first-question3 .fa{
     margin-top: 30px;
 }
 
@@ -1316,7 +1316,7 @@ MEDIA QUARY FOR MIN-WIDTH 768px
         padding: 17px 20px 15px 0;
         min-width: 100px;
     }
-    .first-question .fa{
+    .first-question .fa,.first-question1 .fa,.first-question2 .fa,.first-question3 .fa{
         margin-top: 20px;
        
     }
