--- a/main.css
+++ b/main.css
@@ -788,10 +788,10 @@ video:focus{
     object-fit: cover;
 }
 .wrap-both-q-a{
-    background-color: #fff;
-    border: 1px solid gray;
+    background-color: #fdfefe;
+    border: 2px solid #f1f4f1;
     padding: 5px 20px;
-    margin: 5px 0;
+    margin: 10px 0;
 }
 .first-question,.first-question1,.first-question2,.first-question3{
     display: flex;
