--- a/main.css
+++ b/main.css
@@ -875,7 +875,7 @@ p.first-answer{
     margin-top: 10px;
     margin-bottom: 5px;
     color: #52b765;
-    font-size: 17px;
+    font-size: 18px;
     font-weight: 700;
 }
 .hover-prize h3{
@@ -884,9 +884,10 @@ p.first-answer{
     font-weight: 600;
 }
 .hover-prize h6{
-    color: #323232;
-    font-size: 22px;
-    font-weight: 600;
+    color: #999;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 25px;
 }
 
 
