--- a/main.css
+++ b/main.css
@@ -890,6 +890,13 @@ p.first-answer{
     line-height: 25px;
 }
 
+.price-tag-container{
+    background-color: #fff;
+    max-width: 350px;
+    margin: 50px auto;
+    box-shadow: 0 10px 20px rgb(157 174 185 / 15%);
+}
+
 
 /* ========================
  ALL FOCUS UPON SELECTION
