--- a/main.css
+++ b/main.css
@@ -942,7 +942,14 @@ p.first-answer{
 /* ====================================================================================================== */
 
 
-
+/* ================
+MEDIA QUARY FOR 540
+====================*/
+/* @media(max-width:600px){
+    .machine3 img{
+        display: none;
+    }
+} */
 
 
 /* ================
