--- a/main.css
+++ b/main.css
@@ -1675,6 +1675,41 @@ MEDIA QUARY FOR MIN-WIDTH 924px
         left: 40px;
         margin-top: 70px;
     }
+    .delivery-bus img{
+        object-fit: cover;
+        width: 100%;
+        padding-right: 90px;
+        max-width: 600px;
+    }
+    .map{
+        width: 100%;
+        height: 50vh;
+    }
+    .bus-info{
+        text-align: left;
+    }
+    .bus-info h3{
+        font-size: 32px;
+        line-height: 40px;
+        margin: 21px 0 0 0;
+        /* max-width: 600px; */
+        padding-bottom: 17px;
+        font-weight: 700;
+        color: #323232;
+    }
+    .bus-info h1{
+        font-size: 23px;
+        color: #323232;
+        margin-top: 20px;
+    }
+    .bus-info p{
+        font-size: 16px;
+        width: 70%;
+        color: #7b7b7b;
+    }
+    .bus-info h3 span{
+        color: #52b765;
+    }
 }
 
 
