--- a/main.css
+++ b/main.css
@@ -1681,6 +1681,9 @@ MEDIA QUARY FOR MIN-WIDTH 924px
         padding-right: 90px;
         max-width: 600px;
     }
+    /* =========?=
+    GOOGLE MAP
+    =======?*/
     .map{
         margin-top: 40px;
         width: 100%;
