--- a/main.css
+++ b/main.css
@@ -1682,7 +1682,11 @@ MEDIA QUARY FOR MIN-WIDTH 924px
         max-width: 600px;
     }
 
-    /* MEDIA QUARY 768px */
+  .join-btn{
+      background-color: #900000;
+      text-align: center;
+      align-items: center;
+  }
    
 
 
