--- a/main.css
+++ b/main.css
@@ -1683,18 +1683,10 @@ MEDIA QUARY FOR MIN-WIDTH 924px
     }
 
 
-/* Option link on the header */
+/* ===================
+EVENTS AND PRESENSATION
+======================*/
 
-.team-carousel{
-    text-align: center;
-    background-color: #545454;
-    width: 50%;
-    margin: 0 auto;
-}
-.team-carousel h3{
-    color: #fff;
-    font-size: 18px;
-}
 
 
 
