--- a/main.css
+++ b/main.css
@@ -1684,16 +1684,53 @@ MEDIA QUARY FOR MIN-WIDTH 924px
 
 
 /* ===================
-    REGISTARS
+    DOWNLOAD LINKS
 ======================*/
 
-.registar{
-    background-color: #ccc;
-    padding: 20px;
+.free{
+    display: flex;
+    justify-content: space-between;
 }
-.reg-text h3{
+aside{
+    display: flex;
+    justify-content: space-around;
+    width: 20%;
+}
+aside h4{
+    font-size: 18px;
+}
+.free span{
+    font-size: 18px;
+}
+.free span::before{
+    content: "+";
+    margin-right: 30px;
     color: #900000;
 }
+aside p{
+    font-size: 18px;
+    color: #900000;
+}
+
+/* Media for Download Links */
+@media(max-width: 600px){
+    .free{
+        display: block;
+        justify-content: center;
+    }
+    aside{
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+    }
+}
+@media(min-width: 768px){
+    .free{
+        display: flex;
+        justify-content: space-between;
+    }
+}
+
 
 
 
