--- a/main.css
+++ b/main.css
@@ -1689,6 +1689,7 @@ MEDIA QUARY FOR MIN-WIDTH 924px
 figure{
     background-color: #fff;
     height: auto;
+    width: 350px;
     padding-bottom: 20px;
     border: 3px solid #900000;
     border-radius: 10px;
