--- a/main.css
+++ b/main.css
@@ -6,6 +6,7 @@
 figure{
     background-color: #fff;
     height: auto;
+    margin: 30px auto;
     width: 320px;
     padding-bottom: 20px;
     align-items: center;
@@ -21,7 +22,7 @@ figure svg{
 .figure{
     max-width: 320px;
     text-align:center;
-    margin: 20px auto;
+    margin: 30px auto;
 
 }
 .figure select{
@@ -57,6 +58,37 @@ figure svg{
 }
 .dtl-linkedin p{
     color: #fff;
+}
+
+
+.about{
+    padding: 10px 30px;
+}
+.about p{
+    font-size: 18px;
+}
+.about h5{
+    margin: 15px 0;
+    font-size: 18px;
+}
+.box-wrap{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.boxes{
+    background-color: #ccc;
+    width: 150px;
+    margin: 20px 0;
+    text-align: center;
+    padding: 15px 20px;
+}
+.boxes p{
+    color: #fff;
+    font-size: 16px;
+}
+.check-list p{
+    margin-bottom: 15px;
 }
 
 
