--- a/main.css
+++ b/main.css
@@ -91,7 +91,13 @@ figure svg{
 .check-list p{
     margin-bottom: 15px;
 }
+.check-list{
+    list-style-type: none;
+}
 
+.check-list li svg{
+    margin-right: 10px;
+}
 
 /* ===================
     THIS MEDIA QUARY STARTED FROM 992px 
@@ -129,7 +135,6 @@ figure svg{
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     padding: 0;
-   
     list-style-type: none;
     text-decoration: none;
 }
