--- a/main.css
+++ b/main.css
@@ -7,7 +7,10 @@ PROCESS...
 }
 .main-process h3,.main-process2 h3,.main-process1 h3,.main-process p,.main-process1 p,.main-process2 p{
     color: #000;
+    margin-bottom: 10px;
 }
+
+
 
 
 
@@ -17,15 +20,18 @@ PROCESS...
     THIS MEDIA QUARY STARTED FROM 992px 
 =========================*/
 
-@media(min-width: 992px){
+@media(min-width: 768px){
+
+    /* media for process */
     .process-section{
         display: flex;
-        
+        justify-content: space-between;
     }
     .main-process1::before{
         content: url("images/arrow-1.jpg");
-        position: relative;
-        right: -30px;
+        position: absolute;
+        margin-left: -60px;
+        width: 60px;
     }
 }
 
