--- a/main.css
+++ b/main.css
@@ -1685,12 +1685,12 @@ MEDIA QUARY FOR MIN-WIDTH 924px
     /* =========?=
     GOOGLE MAP
     =======?*/
-    .map{
+    /* .map{
         margin-top: 40px;
         width: 100%;
         border: 0;
         height: 50vh;
-    }
+    } */
     .bus-info{
         text-align: left;
     }
